wwr/styles/rafting.css
:root {
    /* Rafting Colors. Link to colors.co https://coolors.co/b6b197-b49a67-1d2d44-307351  */
    --primary-color: #e0dabb;
    --secondary-color: #d4b880;
    --accent-color1: #1D2D44;
    --accent-color2: #193929;
    --heading-font: "Rubik", sans-serif;
    --paragraph-font: "Source Sans 3", sans-serif;
    --margin: 0.8rem;
    --padding: 2rem;
    --left-margin: 2rem;
    --right-margin: 2rem;

}


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

header,
main,
footer,
nav {
    margin: 0 auto;
    max-width: 1280px;
}

main {
    background-color: var(--secondary-color);
}



.rafting_images,
.history,
footer {
    padding-left: var(--left-margin);
    padding-right: var(--right-margin);
}


h1 {
    font-family: var(--heading-font);
    color: var(--accent-color2);
}


h2 {
    font-family: var(--paragraph-font);
    color: var(--accent-color1);
}

p {
    font-family: var(--paragraph-font);
    color: var(--accent-color2);
}



/* First third */
.logo_nobg {
    width: 250px;
    height: auto;
}


header {
    display: grid;
    grid-template-columns: 230px 1fr;
    align-items: center;
    border-bottom: solid 10px var(--accent-color1);
    background-color: var(--secondary-color);
}



.navigation-tabs {
    display: flex;
    padding: 1rem;
    align-items: center;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;

}



nav.navigation-tabs a {
    background-color: var(--primary-color);
    display: flex;
    text-align: center;
    padding: 10px;
    padding-left: 3rem;
    padding-right: 3rem;
    border-top: solid 1px var(--accent-color1);
    border-bottom: solid 1px var(--accent-color1);
    border-right: solid 1px var(--accent-color1);
}


div.nav_left a {
    border-radius: 5px 0 0 5px;
    border-left: solid 1px var(--accent-color1);
}

div.nav_right a {
    border-radius: 0 5px 5px 0;
}


.navigation-tabs a,
.social_links a {
    text-decoration: none;
    font-family: var(--paragraph-font);
    color: var(--accent-color2);
    background-color: var(--secondary-color);
}





/* Main upper section Home page */
.company_intro h1,
.company_intro p {
    padding-bottom: 10px;
}

.company_intro h2 {
    font-size: 16px;
    color: rgb(255, 255, 255, 0.6);
    letter-spacing: 4px;
}

.company_intro p {
    padding-bottom: 30px;
    color: rgb(255, 255, 255, 0.7);
    font-size: 20px;
}

.company_intro h1 {
    font-size: 55px;
    padding-top: 1rem;
    padding-bottom: 2rem;
}

.button_box,
.button_box a {
    display: flex;
    gap: 10px;
    text-decoration: none;
}

.button_1,
.button_2 {
    font-family: var(--heading-font);
    color: white;
    display: flex;
    padding: 7px;
    vertical-align: middle;
    justify-content: center;
    align-items: center;
    text-align: center;
    border: solid white 3px;

}


.button_1 {
    background-color: var(--accent-color1);
}

.button_2 {
    background-color: var(--accent-color2);
}

.button_box img {
    width: 30px;
    height: auto;
    filter: brightness(1.5);
}



.trips_button_box img {
    width: 30px;
    height: auto;
    filter: brightness(1.5);
}


.home_image1 img {
    width: 626px;
    height: auto;
    box-shadow: 0px 0px 6px 4px rgba(0, 0, 0, 0.5);
}



/* Main upper Image (intro image) About us*/
article {
    font-family: var(--paragraph-font);
    color: var(--accent-color1);
}

.hero {
    position: relative;
}

.hero img {
    display: block;
    width: 100%;
    height: auto;
}

.hero h1 {
    position: absolute;
    top: 2rem;
    left: 0;
    width: 100%;
    padding: 15px;
    background-color: rgba(255, 255, 255, 0.5);
    text-align: center;
    word-spacing: 1rem;
}


.hero h2 {
    padding-bottom: 6px;
}


.hero article img {
    width: 40%;
    height: auto;
    float: right;
    margin-left: 12px;
    margin-right: -20px;
    margin-top: -56px;
    margin-bottom: 12px;

}

.hero article {
    padding: 20px;
    position: absolute;
    text-align: left;
    top: 33%;
    left: 40%;
    background-color: rgba(255, 255, 255, 0.5);
    overflow: hidden;
}


/* second third */

.history {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    align-items: center;
}

.history_image {
    justify-self: center;
}


.history_image img {
    width: 300px;
    height: auto;
    padding: 20px;


}

.history_image h2 {
    text-align: center;
    margin: -10px;
}


.history p {
    padding-top: var(--padding);
    padding-bottom: var(--padding);
    align-content: center;

}



/* Bottom Third */

.rafting_images {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: auto;
}

.rafting_images h2 {

    margin-top: var(--margin);
    margin-bottom: var(--margin);
    text-align: center;
}



.rafting_images figure {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}


.rafting_images h2 {
    grid-column: 1 / 7;
    grid-row: 1;
}

.rafting_images img {
    width: 150px;
    height: auto;

}


.rafting_images figcaption {
    display: grid;

}






footer {
    padding: 1rem;
    padding-right: 2rem;
    display: grid;
    grid-template-columns: 184px 1fr 140px;
    background-color: var(--secondary-color);
    align-items: center;
}

footer p {
    grid-column: 2;
    text-align: center;
    color: var(--accent-color1);
}

.social_links {
    gap: 10px;
    display: flex;
}

.social_links img {
    gap: 10px;
    height: 40px;
    width: auto;
    margin-top: 5px;
}



/* Background Color */
body {
    background-color: var(--primary-color);
}


/* Home page CSS */

.home_container1 {
    display: flex;
    gap: 8px;
}

.home_column1 {
    width: 48%;
    box-sizing: border-box;
    padding: 2rem;
}

.home_image2-1 img {
    width: 400px;
    height: auto;
    padding: var(--padding);
    padding-top: 0;
}

.home_image2-2 img {
    width: 800px;
    height: auto;
    padding-left: var(--padding);
}
/* ... */

